:bug: Fix crash when editing too fast and when adding new link + dark mode tweeks

--- a/client/src/css/theme.css
+++ b/client/src/css/theme.css
@@ -91,7 +91,7 @@
   --background-color-app: #333333;
   --background-color-primary: #181818;
   --background-color-secondary: rgba(90, 90, 90, 0.6);
-  --background-color-tertiary: rgba(0, 0, 0, 0.2);
+  --background-color-tertiary:#353535;
 
   --border: 3px solid #353535;
   --border-color: #353535;
